# micro_llm

./: .gitignore  README.md  data.json  docker-compose.yaml  hello.py  pyproject.toml
.github/workflows/: on__commit_on_main_branch.yaml  on__commit_on_pr.yaml  on__pr_edit.yaml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_187fff4e7ab19887_auth_service_py.html  z_187fff4e7ab19887_llm_service_py.html  z_43cbf17825e09c7f_app_py.html  z_d3bbba803dc4051a_auth_routes_py.html  z_d3bbba803dc4051a_fastapi_app_py.html  z_d3bbba803dc4051a_llm_routes_py.html  z_d405d2581e3947aa_auth_config_py.html  z_d405d2581e3947aa_openai_config_py.html  z_ddfdbc0764af7dac_origins_middleware_py.html  z_ddfdbc0764af7dac_validate_user_wrapper_py.html
micro_llm/: app.py  app.pyi
micro_llm/config/: auth_config.py  auth_config.pyi  openai_config.py  openai_config.pyi
micro_llm/domain/: command_context.py  command_context.pyi  domain.py  domain.pyi
micro_llm/domain/commands/: query_llm_command.py  query_llm_command.pyi  refresh_access_token_command.py  refresh_access_token_command.pyi  signin_command.py  signin_command.pyi  validate_user_command.py  validate_user_command.pyi
micro_llm/domain/entities/: chat_message.py  chat_message.pyi  chat_role.pyi  user_tokens.pyi
micro_llm/domain/exceptions/: user_exceptions.py
micro_llm/routes/: auth_routes.py  auth_routes.pyi  fastapi_app.py  fastapi_app.pyi  llm_routes.py  llm_routes.pyi
micro_llm/routes/dtos/: channel_dto.py  playlist_dto.py  user_dto.py  video_dto.py  video_formats_dto.py
micro_llm/routes/utils/: origins_middleware.py  origins_middleware.pyi  validate_user_wrapper.py  validate_user_wrapper.pyi
micro_llm/services/: auth_service.py  auth_service.pyi  llm_service.py  llm_service.pyi
tests/unit/: test_happy.py
