[project]
name = "micro_llm"
description = "A micro LLM service."
version = "1.0.0"
authors = [{ name = "Mathieu Gueribout", email = "gueribout.mathieu@protonmail.com" }]
maintainers = [{ name = "Mathieu Gueribout", email = "gueribout.mathieu@protonmail.com" }]
readme = "README.md"
requires-python = ">=3.11, <3.12"
keywords = ["python"]
classifiers = ["Programming Language :: Python :: 3"]

dependencies = [
    "coverage==7.6.*",
    "docker==7.1.*",
    "fastapi==0.115.*",
    "httpx==0.28.*",
    "openai==1.76.*",
    "pre-commit==4.0.*",
    "pyjwt==2.10.*",
    "pyright==1.1.*",
    "pytest==8.3.*",
    "pytest-asyncio==0.25.*",
    "pytest-mock==3.14.*",
    "python-dotenv==1.0.*",
    "python-json-logger==3.2.*",
    "python_utils@git+https://github.com/gueriboutmathieu/python_utils@1.0.18",
    "ruff==0.9.*",
    "uuid6==2024.7.*",
    "uvicorn==0.34.*",
]

[project.urls]
repository = "https://github.com/gueriboutmathieu/micro_llm"

[tool.uv]
package = true  # Install current package when running `uv sync`

[build-system]
requires = ["setuptools==75.8.*", "wheel==0.45.*", "setuptools-scm[toml]==8.1.*"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
micro_llm = ["*.pyi"]

[tool.setuptools]
packages = [
    "micro_llm",
    "micro_llm.config",
    "micro_llm.domain",
    "micro_llm.domain.commands",
    "micro_llm.domain.entities",
    "micro_llm.domain.exceptions",
    "micro_llm.routes",
    "micro_llm.services",
]

[tool.coverage.run]
source = ["micro_llm"]
relative_files = true

[tool.ruff]
target-version = "py311"
exclude = [
    ".git",
    ".github",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
fixable = ["ALL"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pyright]
typeCheckingMode = "strict"
include = ["micro_llm", "tests"]
exclude = ["*.venv/**", ".github/*"]
